--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@
 
 .page__main--title{
     font-family: "Abril Fatface", cursive;
+    text-align: center;
     font-size: 40px;
     color: #08415c;
 }
@@ -33,15 +34,80 @@
     color: #283044;
 }
 
-.page__main--input-label{
-    color: #08415c;
-}
-
 .page__main--input{
+    border: 1px solid #08415c;
     background-color:#f9dbbd;
     height:30px;
     text-align:center;
-    transition-duration: 0.4s;
-    
+    border-radius: 5px;
+    transition-duration: 0.5s;
+    margin-bottom: 10px;
+}
+
+.page__main--input:hover{
+    border-radius: 20px;
+}
+
+.buttons{
+    display: inline;
+}
+
+.button{
+    font-family: 'Roboto', sans-serif;
+    background-color:#08415c;
+    color: #ffffff;
+    width: 80px;
+    height: 30px;
+    border-radius: 5px;  
+    font-size: 14px;      
+    transition-duration: 0.3s; 
+}
+
+.button:hover{
+    background-color: #f9dbbd;
+    color: #08415c;
+    border: none;
+}
+
+.reset-button{
+    font-family: 'Roboto', sans-serif;
+    background-color:#283044;
+    color: #ffffff;
+    width: 80px;
+    height:30px;
+    border-radius: 5px;  
+    font-size:14px;      
+    transition-duration: 0.4s; 
+}
+
+.reset-button:hover{
+    background-color: #e9afa3;
+    color: #283044;
+    border: none;
+}
+
+.clues{
+    font-family: 'Roboto', sans-serif;
+    margin-top: 30px;
+    text-align: center;
+}
+
+.clues__text{
+    border: 1px solid #e9afa3;
+    padding:15px;
+    transition-duration: 0.3s; 
+    color: #08415c;
+}
+
+
+.clues__counter{
+    font-family: "Abril Fatface", cursive;
+    font-size: 20px;
+    color: #08415c;
+}
+
+.clues__counter:hover{
+    color: #e9afa3;
+}
 
 /*Problemas con NESTING*/
